--- a/alloy/assets/error.html
+++ b/alloy/assets/error.html
@@ -81,8 +81,9 @@
     </head>
     <body>
         <div class="top">
-            <p>AlloyProxy</p>
+            <p>PT</p>
         </div>
+            <p> well this is not vary pog so here is a error ;( if you think this is a bug contact delt </p>
             <p id="error">%ERROR%</p>
         </body>
     </html>
