--- a/public/index.html
+++ b/public/index.html
@@ -94,6 +94,7 @@
 <div class="container">
 <p>PT</p>
 <form class="url" method="POST" action="/createSession">
+    <label for="phone"google.com:</label><br><br>
     <input name="url" id="iurl" type="text">
     <button type="submit" id="btn">Go!</button>
    
